# orderedYAML

./: LICENSE  README.md  pyproject.toml
orderedYAML/: __init__.py  core.py
